--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "joi": "^17.9.2",
     "joi-password": "^4.1.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
