--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "date-and-time": "^3.0.0",
+    "date-fns": "^2.30.0",
     "joi": "^17.9.2",
     "joi-password": "^4.1.1",
     "jwt-decode": "^3.1.2",
