--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "resuite": "^0.0.2",
