--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi-password": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "node-sass": "8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
