--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "joi": "^17.9.2",
     "joi-password": "^4.1.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "node-sass": "8.0",
